Update About page

--- a/about.html
+++ b/about.html
@@ -25,19 +25,19 @@ permalink: /about/
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "About"
+                "name": "About Me"
               }]
             }
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Us | Sybiltec Web Design</title>       
+        <title>About Me | Sybil Mayard, MSc | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard is a freelance web developer. She graduated 
         from the University of Kent with an MSc in Computer Science. Read about her experiences here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="About Us | Sybiltec Web Design" />
+        <meta property="og:title" content="About Me | Sybil Mayard, MSc | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard is a freelance web developer. She 
         graduated from the University of Kent with an MSc in Computer Science. Read about her experiences here." />
         <meta property="og:url" content="https://sybiltec.com/about/" />
@@ -160,9 +160,8 @@ permalink: /about/
         </div>
         <div class="hero">
             <div class="container-1140">
-                <h1>About Us</h1>
-                <h2>Get to know us better</h2>
-                
+                <h1>About Me</h1>
+                <h2>Freelance Web Designer and Digital Services Consultant</h2>        
             </div>
         </div>
         <div class="main section">
@@ -173,13 +172,13 @@ permalink: /about/
                     </li>
                     >
                     <li>
-                        About
+                        About Me
                     </li>
                 </ol>
                 <h2>About Sybil</h2>
                 <hr class="left-align">
 
-                <p>Thank you for visiting our website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Four years later, I'm proud to say that we've worked with several SMEs from various industry sectors to help them achieve their digital goals. Our main services include <a href="https://sybiltec.com/small-business-web-design/">websites for small businesses</a>, <a href="https://sybiltec.com/ecommerce-websites/">e-commerce websites</a>, and online learning platforms.</p>
+                <p>Thank you for visiting my website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Five years later, I'm proud to say that I've worked with several SMEs from various industry sectors to help them achieve their digital goals. My main services include <a href="https://sybiltec.com/small-business-web-design/">websites for small businesses</a>, <a href="https://sybiltec.com/ecommerce-websites/">e-commerce websites</a>, and online learning platforms.</p>
 
                 <p>Current clients include the <a href="https://techdiplomacy.org" target="_blank" rel="noreferrer noopener">Krach Institute for Tech Diplomacy at Purdue</a>, which involves designing and building an online portal for the new <a href="https://techdiplomacyacademy.org/" target="_blank" rel="noopener noreferrer">Tech Diplomacy Academy</a> project which has just launched. I am also pleased to be working together with CNT Associates to deliver the Bexley Talking Business programme in association with the London Borough of Bexley and fully funded by the UK Shared Prosperity Fund. More information can be found on the <a href="https://sybiltec.com/website-design/">Bexley Web Design</a> page.</p>
 
@@ -192,72 +191,24 @@ permalink: /about/
 
                 <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money. For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects/">Projects</a> page.</p>
 
-                <p>Click the button below to find out how we can help take your business to the next level.</p>
+                <p>Click the button below to find out how I can help take your business to the next level.</p>
                 
                 <div class="padding-top padding-bottom">
-                    <a href="https://sybiltec.com/contact/" class="btn-primary">Contact us</a>
+                    <a href="https://sybiltec.com/contact/" class="btn-primary">Contact me</a>
                 </div>
 
                 <div class="center">
-                    <h2>Our Values</h2>
+                    <h2>My Values</h2>
                         <hr>
-                    <div class="row">
-                        <div class="col-2"><i class="fa-regular fa-circle-check"></i><p><strong>Committed to Succeed</strong></p></div>
-                        <div class="col-2"><i class="fa-solid fa-people-group"></i><p><strong>Working Together</strong></p></div>
-                        <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Keeping Our Promises</strong></p></div>
-                        <div class="col-2"><i class="fa-regular fa-comments"></i><p><strong>Regular Communication</strong></p></div>
-                        <div class="col-2"><i class="fa-regular fa-clock"></i><p><strong>Delivering on Time</strong></p></div>
-                        <div class="col-2"><i class="fa-solid fa-trophy"></i><p><strong>Exceeding Expectations</strong></p></div>
+                    <div class="row padding-top">
+                        <div class="col-2"><i class="fa-regular fa-circle-check"></i><p><strong>Committed to Your Succeess</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-people-group"></i><p><strong>Working<br>Together</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Keeping My<br>Promises</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-comments"></i><p><strong>Jargon-Free Communication</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-clock"></i><p><strong>Delivering<br>on Time</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-trophy"></i><p><strong>Exceeding<br>Expectations</strong></p></div>
                     </div>
                 </div>
-
-            <h2>The Team</h2>
-            <hr class="left-align">
-            <p>As a business owner, you are probably aware that having a beautiful website is only one aspect of your business. Have you thought about photography, brand planning, copywriting, social media, data protection, or raising funds? We are committed to delivering the highest quality services to our customers in London, Kent and beyond, therefore, I work alongside other professionals in related fields to provide much more than just a web design service. My team of experts can help you make your project a breeze. By partnering with the most knowledgeable and experienced individuals, you can rest assured that your project is in good hands. We take a collaborative approach and will work together with you to elevate your online presence and help your business achieve its potential.</p>
-
-            <div class="row">
-                <div class="col-6">
-                    <p><img src="https://sybiltec.com/images/sybil-mayard-250x250.jpg" alt="Sybil Mayard's headshot"></p>
-                    <p><strong>Sybil Mayard, MSc - Founder</strong></p>
-                    <p>I am the Founder of Sybiltec, helping small business owners to improve their online presence through better web design. With my creativity and keen eye for detail, I craft visually appealing websites that perfectly reflect the businesses' brand and values. Notable clients include the Krach Institute for Tech Diplomacy at Purdue and Emrys Consulting.</p>
-                    <a href="https://www.linkedin.com/in/sybil-m/" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-linkedin"></i></a>
-                </div>
-                <div class="col-6">
-                    <p><img src="https://sybiltec.com/images/gary-parker.jpeg" alt="Gary Parker's headshot"></p>
-                    <p><strong>Gary Parker, BA (Hons) - Business Support and Fundraising Expert</strong></p>
-                    <p>Gary is the Managing Director of CNT Associates, a London-based business support and fundraising organisation. He has 20 years of experience in the field of fundraising and has worked on projects for significant organisations including the Jimmy Choo Fashion Academy, GLL and the London Borough of Bexley.</p>
-                    <a href="https://www.linkedin.com/in/gary-parker-cnt1/" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-linkedin"></i></a>
-                </div>
-            </div>
-
-                </div>
-            </div>
-
-            <div class="certifications section">
-                <div class="container-1140">
-                    <h2>Certifications</h2>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <h4>Foundations of User Experience (UX) Design</h4>
-                                <img src="https://sybiltec.com/images/certifications/coursera-google-foundations-of-user-experience-ux-design.png"
-                                    alt="Coursera Google Foundations of User Experience (UX) Design certificate">
-                        </div>
-                        <div class="col-3">
-                            <h4>The Complete 2022 Software Testing Bootcamp</h4>
-                            <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpg"
-                                    alt="Udemy The Complete 2022 Software Testing Bootcamp">
-                        </div>
-                        <div class="col-3">
-                            <h4>Yoast SEO Academy: SEO for Beginners Certified</h4>
-                            <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" target="_blank" rel="noopener noreferrer"><img src="https://academy.yoast.com/badge/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" width="200" alt="Sybil Mayard successfully completed the SEO for beginners course!"/></a>
-                        </div>
-                        <div class="col-3">
-                            <h4>The Fundamentals of Digital Marketing</h4>
-                            <img src="https://sybiltec.com/images/certifications/google-digital-garage-fundamentals-of-digital-marketing.png"
-                                    alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -267,23 +218,49 @@ permalink: /about/
                 <div class="container-1140">
                     <h2>Key Skills</h2>
                     <hr>
-                    <div class="row center">
-                        <div class="col-3"><i class="fa-solid fa-cart-shopping"></i><h3 class="smaller">BigCommerce</h3></div>
-                        <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">Divi</h3></div>
+                    <div class="row center padding-top">         
                         <div class="col-3"><i class="fab fa-elementor"></i><h3 class="smaller">Elementor</h3></div>
                         <div class="col-3"><i class="fa-brands fa-figma"></i><h3 class="smaller">Figma</h3></div>
-                    </div>
-                    <div class="row center">
                         <div class="col-3"><i class="fa-solid fa-chart-simple"></i><h3 class="smaller">Google Analytics</h3></div>
+                        <div class="col-3"><i class="fa-brands fa-hubspot"></i><h3 class="smaller">HubSpot</h3></div>
+                    </div>
+                    <div class="row center"> 
+                        <div class="col-3"><i class="fa-solid fa-envelope"></i><h3 class="smaller">Klaviyo</h3></div>
                         <div class="col-3"><i class="fa-solid fa-graduation-cap"></i><h3 class="smaller">LearnDash</h3></div>
-                        <div class="col-3"><i class="fab fa-shopify"></i><h3 class="smaller">Shopify</h3></div>
-                        <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">Unbounce</h3></div>
+                        <div class="col-3"><i class="fa-brands fa-mailchimp"></i><h3 class="smaller">Mailchimp</h3></div>
+                        <div class="col-3"><i class="fa-solid fa-at"></i><h3 class="smaller">MailerLite</h3></div> 
                     </div>
                     <div class="row center">
+                        <div class="col-3"><i class="fab fa-shopify"></i><h3 class="smaller">Shopify</h3></div>   
                         <div class="col-3"><i class="fab fa-wix"></i><h3 class="smaller">Wix</h3></div>
                         <div class="col-3"><i class="fa-solid fa-cart-shopping"></i><h3 class="smaller">WooCommerce</h3></div>
-                        <div class="col-3"><i class="fab fa-wordpress"></i><h3 class="smaller">WordPress</h3></div>
-                        <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">WP Bakery</h3></div>
+                        <div class="col-3"><i class="fab fa-wordpress"></i><h3 class="smaller">WordPress</h3></div>  
+                    </div>
+                </div>
+            </div>
+                        <div class="certifications section">
+                <div class="container-1140">
+                    <h2>Certifications</h2>
+                    <hr>
+                    <div class="row padding-top">
+                        <div class="col-3">
+                            <img src="https://sybiltec.com/images/certifications/coursera-google-foundations-of-user-experience-ux-design.png"
+                                    alt="Coursera Google Foundations of User Experience (UX) Design certificate">
+                            <h4>Foundations of<br>User Experience (UX) Design</h4>
+                        </div>
+                        <div class="col-3">
+                            <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpg"
+                                    alt="Udemy The Complete 2022 Software Testing Bootcamp">
+                            <h4>The Complete 2022<br>Software Testing Bootcamp</h4>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" target="_blank" rel="noopener noreferrer"><img src="https://academy.yoast.com/badge/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" width="200" alt="Sybil Mayard successfully completed the SEO for beginners course!"/></a>
+                            <h4>Yoast SEO Academy:<br>SEO for Beginners Certified</h4>
+                        </div>
+                        <div class="col-3">
+                            <img src="https://sybiltec.com/images/certifications/google-digital-garage-fundamentals-of-digital-marketing.png" alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
+                            <h4>The Fundamentals of<br>Digital Marketing</h4>
+                        </div>
                     </div>
                 </div>
             </div>
