--- a/free-workshops-greenwich-borough.html
+++ b/free-workshops-greenwich-borough.html
@@ -319,14 +319,15 @@ permalink: /free-workshops-greenwich-borough/
                 <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
             </div>
             <div class="col-2-4">
-                        <p><strong>Some Areas We Cover</strong></p>
+                        <p><strong>Some Areas I Cover</strong></p>
                         <p><a href="https://sybiltec.com/construction-web-design/">Construction Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
                         <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
                     </div>
-            <div class="col-2-4">
-                <p><strong>Address</strong></p>
-                            <p>The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
+                    <div class="col-2-4">
+                        <p><strong>Contact</strong></p>
+                            <p><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></p>
+                            <p><a href="tel:00447768059730">+44(0)7768059730</a></p>
                         <p>
                     <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
                 </p>      
@@ -351,9 +352,9 @@ permalink: /free-workshops-greenwich-borough/
                 <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-youtube"></i></a>
             </div>
-    <div class="copyright section center"><p>Copyright &copy;           
-        <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
-    </div>
+    <div class="copyright section center">
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+            </div>
 </div>
 <script>
     function myFunction() {
