--- a/index.html
+++ b/index.html
@@ -141,12 +141,11 @@
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h1>Transform your website into a platform for <span class="emphasis">growth</span></h1>
-                        <p>Bespoke web design services for small businesses in London, Surrey, Kent, all across the UK and beyond.</p>
-                        
-                            <p><i class="fa-solid fa-circle-check"></i><span>Web Design</span></p>
-                            <p><i class="fa-solid fa-circle-check"></i><span>Web Development</span></p>
-                            <p class="padding-bottom"><i class="fa-solid fa-circle-check"></i><span>Website Maintenance</span></p>
+                        <h1>Your <span class="emphasis">human</span> partner in a digital world</h1>
+                        <p>Web design and digital consulting services for small businesses in London, Surrey, Bromley, all across the UK and beyond.</p>
+                            <p><i class="fa-solid fa-circle-check"></i><span>Small Business Websites</span></p>
+                            <p><i class="fa-solid fa-circle-check"></i><span>E-commerce Websites</span></p>
+                            <p class="padding-bottom"><i class="fa-solid fa-circle-check"></i><span>Online Learning Websites</span></p>
                         <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Start Your Project Today</a>
                     </div>
                     <div class="col-4">
@@ -204,7 +203,7 @@
                     <div class="col-3"><img src="images/clients/tech-diplomacy-academy.webp" alt="Tech Diplomacy Academy"><p class="customer">Tech Diplomacy Academy</p></div>
                 </div>
             </div>
-            <div class="center padding-bottom padding-top"><a class="btn-primary" href="https://sybiltec.com/clients/">See Past Clients</a></div>
+            <div class="center padding-bottom padding-top"><a class="btn-primary" href="https://sybiltec.com/clients/">Read Case Studies</a></div>
         </div>
         <div class="section grey">
             <div class="container-1140 padding-top padding-bottom">
