--- a/contact.html
+++ b/contact.html
@@ -25,18 +25,18 @@ permalink: /contact/
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "Contact"
+                "name": "Contact Me"
               }]
             }
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact Me For a Quote or More Information | Sybiltec Web Design</title>       
-        <meta name="Description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or a quote.">
+        <title>Contact Me For a Quote or More Information | Sybiltec</title>       
+        <meta name="Description" content="Web design and digital consulting services for SMEs in London, Surrey and Bromley. Contact me for a free consultation or to learn more about my services.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Contact Me for a Quote or More Info | Sybiltec Web Design" />
-        <meta property="og:description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or a quote." />
+        <meta property="og:title" content="Contact Me For a Quote or More Information | Sybiltec" />
+        <meta property="og:description" content="Web design and digital consulting services for SMEs in London, Surrey and Bromley. Contact me for a free consultation or to learn more about my services." />
         <meta property="og:url" content="https://sybiltec.com/contact/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -157,10 +157,10 @@ permalink: /contact/
         </div>
         <div class="hero">
             <div class="container-1140">
-                <h1>Contact Sybiltec</h1>          
+                <h1>Contact Me</h1>          
             </div>
         </div>
-        <div class="main section center">
+        <div class="main section padding-bottom">
             <div class="container-1140">
                 <ol class="breadcrumb">
                     <li>
@@ -168,13 +168,29 @@ permalink: /contact/
                     </li>
                     >
                     <li>
-                        Contact
+                        Contact Me
                     </li>
                 </ol>
-                <h2>Let's work together</h2>
-                <hr>
-                    <iframe src="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd"></iframe>
+                <h2>Let's Work Together</h2>
+                <p>Please feel free to contact me on the following details if you would like to discuss your requirements or have a question about my services:</p>
+                <ul>
+                    <li>Email: <a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></li>
+                    <li>Phone: <a href="tel:00447768059730">+44(0)7768059730</a></li>
+                </ul>
+                <h2>Opening Hours</h2>
+                <ul>
+                    <li>Monday: 9am-5pm</li>
+                    <li>Tuesday: 9am-5pm</li>
+                    <li>Wednesday: 9am-5pm</li>
+                    <li>Thursday: 9am-5pm</li>
+                    <li>Friday: 9am-5pm</li>
+                    <li>Saturday: closed</li>
+                    <li>Sunday: closed</li>
+                </ul>
             </div>
+        </div>
+        <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.9393055998826!2d0.13990957669233578!3d51.49598127181063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8af9fc9038dc5%3A0xd2224f2c04e6bc6d!2sInnovation%20Centre%2C%202%20Veridion%20Way%2C%20Erith%20DA18%204AL!5e0!3m2!1sen!2suk!4v1754321951989!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="contact section">
             <div class="container-1140">
