--- a/about.html
+++ b/about.html
@@ -32,14 +32,12 @@ permalink: /about/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Me | Sybil Mayard, MSc | Sybiltec</title>       
-        <meta name="Description" content="Sybil Mayard is a freelance web developer. She graduated 
-        from the University of Kent with an MSc in Computer Science. Read about her experiences here.">
+        <meta name="Description" content="Sybil Mayard, MSc is a freelance web designer & digital consultant, helping SMEs utilise technology more efficiently in their businesses. Read about Sybil here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="About Me | Sybil Mayard, MSc | Sybiltec" />
-        <meta property="og:description" content="Sybil Mayard is a freelance web developer. She 
-        graduated from the University of Kent with an MSc in Computer Science. Read about her experiences here." />
+        <meta property="og:description" content="Sybil Mayard, MSc is a freelance web designer & digital consultant, helping SMEs utilise technology more efficiently in their businesses. Read about Sybil here." />
         <meta property="og:url" content="https://sybiltec.com/about/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -175,32 +173,22 @@ permalink: /about/
                         About Me
                     </li>
                 </ol>
-                <h2>About Sybil</h2>
+                <h2>Hi, I'm Sybil: your human partner in a digital world</h2>
                 <hr class="left-align">
+                <p>Technology is rapidly transforming the way we do business, empowering us to operate faster and more efficiently than ever before. However, keeping up with the speed of technology can be overwhelming. With the vast number of tools at your disposal, how do you decide on the best tools to utilise? And how will you find the time to set up said tools?</p>
 
-                <p>Thank you for visiting my website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Five years later, I'm proud to say that I've worked with several SMEs from various industry sectors to help them achieve their digital goals. My main services include <a href="https://sybiltec.com/small-business-web-design/">websites for small businesses</a>, <a href="https://sybiltec.com/ecommerce-websites/">e-commerce websites</a>, and online learning platforms.</p>
+                <p>In an increasingly digital and AI-driven world, it can be hard to find the right partner for your business. That's where I come in. I understand your frustrations, and I'm here to take care of your technology so you can focus on what matters in your business.</p>
 
-                <p>Current clients include the <a href="https://techdiplomacy.org" target="_blank" rel="noreferrer noopener">Krach Institute for Tech Diplomacy at Purdue</a>, which involves designing and building an online portal for the new <a href="https://techdiplomacyacademy.org/" target="_blank" rel="noopener noreferrer">Tech Diplomacy Academy</a> project which has just launched. I am also pleased to be working together with CNT Associates to deliver the Bexley Talking Business programme in association with the London Borough of Bexley and fully funded by the UK Shared Prosperity Fund. More information can be found on the <a href="https://sybiltec.com/website-design/">Bexley Web Design</a> page.</p>
+                <p>I pride myself on offering a personalised service, so working with me, you'll benefit from a <strong>one-to-one</strong>, <strong>jargon-free</strong> service, where the <strong>human element</strong> is a top priority. So, if you have tech troubles, digital dilemmas or website worries, get in touch with me today!</p>
 
-                <p>I graduated in November 2019 from the University of Kent with a Distinction in MSc Computer Science. Previous roles include:</p>
-                <ul>
-                    <li>QA Engineer at Esme Learning and Riff Analytics</li>
-                    <li>Web Manager at Esme Learning</li>
-                    <li>Junior Analyst at Capacitas</li>
-                </ul>
-
-                <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money. For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects/">Projects</a> page.</p>
-
-                <p>Click the button below to find out how I can help take your business to the next level.</p>
-                
                 <div class="padding-top padding-bottom">
-                    <a href="https://sybiltec.com/contact/" class="btn-primary">Contact me</a>
+                    <a href="https://sybiltec.com/contact/" class="btn-primary">Contact Me</a>
                 </div>
 
-                <div class="center">
+                <div class="center padding-top padding-bottom">
                     <h2>My Values</h2>
-                        <hr>
-                    <div class="row padding-top">
+                    <hr>
+                    <div class="center row padding-top">
                         <div class="col-2"><i class="fa-regular fa-circle-check"></i><p><strong>Committed to Your Succeess</strong></p></div>
                         <div class="col-2"><i class="fa-solid fa-people-group"></i><p><strong>Working<br>Together</strong></p></div>
                         <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Keeping My<br>Promises</strong></p></div>
@@ -209,6 +197,43 @@ permalink: /about/
                         <div class="col-2"><i class="fa-solid fa-trophy"></i><p><strong>Exceeding<br>Expectations</strong></p></div>
                     </div>
                 </div>
+
+                <h2>Background</h2>
+                <hr class="left-align">
+                <p>I'm a <strong>freelance web designer</strong> and <strong>digital consultant</strong>. I founded Sybiltec in 2020 with a mission to make digital services accessible to all small businesses.</p>
+
+                <p>For the past five years, I've been designing and developing websites for small business owners, helping them to maximise their online presence. I'm proud to have worked with clients from various industry sectors, including tech, consulting, creative, e-commerce and construction. My clients are based primarily in the UK, but I have successfully worked with clients in France and the USA.</p>
+
+                <p>In my spare time I enjoy building websites like this one 🙂</p>
+
+                <p>Not only do I build websites, but I also support business owners with related areas including email marketing, automation, CRM setup, cyber security basics, and more.</p>
+
+                <p>Alongside running Sybiltec, I also have the following roles:</p>
+
+                <ul>
+                    <li>Business Support Advisor for the <a href="https://sybiltec.com/website-design/">Bexley Talking Business - Business Support Programme</a> and the <a href="https://sybiltec.com/free-workshops-greenwich-borough/">Royal Borough of Greenwich Generative Business Support Programme</a></li>
+                    <li>Organiser for <a href="https://bexleylinkup.co.uk/" target="_blank" rel="noopener noreferrer">Bexley Linkup</a>, a monthly networking group for local businesses</li>
+                    <li>Committee Member for the non-profit organisation, <a href="https://techwomen4boards.co.uk/" target="_blank" rel="noopener noreferrer">TechWomen4Boards</a></li>
+                </ul>
+
+                <p>Previous roles include:</p>
+
+                <ul>
+                    <li>QA Engineer at Esme Learning and Riff Analytics</li>
+                    <li>Web Manager at Esme Learning</li>
+                    <li>Junior Analyst at Capacitas</li>
+                </ul>
+
+                <p>I am also the founder of VidCareer. It's a start-up idea which began during my masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money. For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects/">Projects</a> page.</p>
+
+                <p>I graduated in November 2019 from the University of Kent with a Distinction in MSc Computer Science.</p>
+
+                <p>Click the button below to start a conversation on how I can help take your business to the next level!</p>
+                
+                <div class="padding-top padding-bottom">
+                    <a href="https://sybiltec.com/contact/" class="btn-primary">Get in Touch</a>
+                </div>
+
                 </div>
             </div>
 
