--- a/clients.html
+++ b/clients.html
@@ -178,21 +178,26 @@ permalink: /clients/
 
                 <div class="logos">
                     <div class="logos-slide">
+                        <img src="https://sybiltec.com/images/logos/low-res/the-bamboo-wardrobe.webp" alt="The Bamboo Wardrobe">
+                        <img src="https://sybiltec.com/images/logos/hi-res/bexley-linkup-long-logo.jpg" alt="Bexley Linkup">
                         <img src="https://sybiltec.com/images/logos/low-res/blue-horizon-lnw.webp" alt="Blue Horizon LNW">
                         <img src="https://sybiltec.com/images/logos/low-res/cnt-associates.webp" alt="CNT Associates">
-                        <img src="https://sybiltec.com/images/logos/low-res/crazy-thumbs.webp" alt="Crazy Thumbs">
+                        <img src="https://sybiltec.com/images/logos/crazy-thumbs-light-transparent-500.png" alt="Crazy Thumbs">
                         <img src="https://sybiltec.com/images/logos/low-res/eat-club.webp" alt="Eat Club">
                         <img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.svg" alt="Emrys Technology & Consultancy">
                         <img src="https://sybiltec.com/images/logos/low-res/encalife.webp" alt="encalife">
                         <img src="https://sybiltec.com/images/logos/low-res/esme-learning-solutions.webp" alt="Esme Learning Solutions">
                         <img src="https://sybiltec.com/images/logos/low-res/events-meets-world.webp" alt="Events Meets World">
                         <img src="https://sybiltec.com/images/logos/low-res/focus-on-learning.webp" alt="Focus on Learning">
-                        <img src="https://sybiltec.com/images/logos/low-res/fortis-data-protection-compliance.svg" alt="Fortis Data Protection Compliance">
+                        <img src="https://sybiltec.com/images/logos/low-res/fortis-logo-v2.png" alt="Fortis Data Protection Compliance">
                         <img src="https://sybiltec.com/images/logos/low-res/future-communities.webp" alt="Future Communities">
+                        <img src="https://sybiltec.com/images/logos/low-res/the-gdpr-compliance-consultancy.webp" alt="The GDPR Compliance Consultancy">
                         <img src="https://sybiltec.com/images/logos/low-res/gll-greenwich-leisure-limited.webp" alt="GLL Greenwich Leisure Limited">
                         <img src="https://sybiltec.com/images/logos/low-res/global-banking-school.webp" alt="Global Banking School">
+                        <img src="https://sybiltec.com/images/logos/hi-res/good-mental-health.png" alt="Good Mental Health">
                         <img src="https://sybiltec.com/images/logos/low-res/happily-clappily-ever-laughter.webp" alt="Happily Clappily Ever Laughter">
                         <img src="https://sybiltec.com/images/logos/low-res/jenup.webp" alt="JenUp">
+                        <img src="https://sybiltec.com/images/logos/hi-res/ken-chu-videography.png" alt="Ken Chu Videography">
                         <img src="https://sybiltec.com/images/logos/low-res/kiko-by-astons-of-london.svg" alt="Kiko by Astons of London">
                         <img src="https://sybiltec.com/images/logos/low-res/krach-institute-for-tech-diplomacy-at-purdue.svg" alt="Krack Institute for Tech Diplomacy at Purdue">
                         <img src="https://sybiltec.com/images/logos/low-res/lcg-lift-consultancy.svg" alt="LCG Lift Consultancy">
@@ -203,8 +208,7 @@ permalink: /clients/
                         <img src="https://sybiltec.com/images/logos/low-res/new-haw-community-centre.webp" alt="New Haw Community Centre">
                         <img src="https://sybiltec.com/images/logos/low-res/pathways-21.webp" alt="Pathways 21">
                         <img src="https://sybiltec.com/images/logos/low-res/swipsearch.webp" alt="SwipSearch">
-                        <img src="https://sybiltec.com/images/logos/low-res/the-bamboo-wardrobe.webp" alt="The Bamboo Wardrobe">
-                        <img src="https://sybiltec.com/images/logos/low-res/the-gdpr-compliance-consultancy.webp" alt="The GDPR Compliance Consultancy">
+                        <img src="https://sybiltec.com/images/logos/low-res/techwomen4boards.png" alt="TechWomen4Boards"> 
                         <img src="https://sybiltec.com/images/logos/low-res/tizane.webp" alt="Tizane">
                         <img src="https://sybiltec.com/images/logos/low-res/together-matters.webp" alt="Together Matters">
                         <img src="https://sybiltec.com/images/logos/low-res/vidcareer.webp" alt="VidCareer">
@@ -260,10 +264,10 @@ permalink: /clients/
                         </div>
                     </div>
                     <div class="col-4">
-                        <h3>JenUp (Courses)</h3>
-                        <img src="https://sybiltec.com/images/clients/jenup-courses.jpg" alt="JenUp Courses">
+                        <h3>JenUp CIC (Courses)</h3>
+                        <img src="https://sybiltec.com/images/clients/jenup-courses.jpg" alt="JenUp CIC Courses">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/jenup/">View JenUp (Courses)</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/jenup/">View JenUp CIC (Courses)</a>
                         </div>
                     </div>
                 </div>
