--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         <img src="images/logos/low-res/designrush-verified-agency.webp" alt="Designrush.com verified agency">
                     </div>
                     <div class="col-2">
-                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="https://sybiltec.com/images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
+                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/low-res/FSB_Member_Logo_Dark_Blue.webp" alt="Visit FSB's website"></a>
                     </div>
                     <div class="col-2">
                         <a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="noreferrer noopener" target="_blank">
