--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                         <p>Web design and digital consulting services for small businesses in London, Surrey, Bromley, all across the UK and beyond.</p>
                             <p><i class="fa-solid fa-circle-check"></i><span>Small Business Websites</span></p>
                             <p><i class="fa-solid fa-circle-check"></i><span>E-commerce Websites</span></p>
-                            <p class="padding-bottom"><i class="fa-solid fa-circle-check"></i><span>Online Learning Websites</span></p>
+                            <p><i class="fa-solid fa-circle-check"></i><span>Online Learning Websites</span></p>
+                            <p class="padding-bottom"><i class="fa-solid fa-circle-check"></i><span>Digital Consulting Services</span></p>
                         <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Start Your Project Today</a>
                     </div>
                     <div class="col-4">
@@ -184,7 +185,7 @@
                 </div>
             </div>
         </div>
-        <div class="clients section container-1140 padding-top">
+        <div class="clients section container-1140 padding-top padding-bottom">
             <h2 class="center">What I've Done</h2>
                 <hr>
             <p class="center">I've worked with businesses from a wide variety of industry sectors, including consultancies, legal professionals, wellbeing organisations, construction companies, tech start-ups, creatives and fashion brands. See some examples of my best work below.</p>
