--- a/contact.html
+++ b/contact.html
@@ -171,10 +171,11 @@ permalink: /contact/
                     </li>
                 </ol>
                 <h2>Let's Work Together</h2>
-                <p>Please feel free to contact me on the following details if you would like to discuss your requirements or have a question about my services:</p>
+                <p>You won't find any AI chatbots on this website, so please feel free to contact me on the following details to speak with a real person.</p>
+                <p>I look forward to hearing from you :)</p>
                 <ul>
                     <li>Email: <a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></li>
-                    <li>Phone: <a href="tel:00447768059730">+44(0)7768059730</a></li>
+                    <li>Phone: <a href="tel:00447768059730">07768 059730</a></li>
                 </ul>
                 <h2>Opening Hours</h2>
                 <ul>
@@ -185,6 +186,7 @@ permalink: /contact/
                     <li>Friday: 9am-5pm</li>
                     <li>Saturday: closed</li>
                     <li>Sunday: closed</li>
+                    <li>Bank holidays: closed</li>
                 </ul>
             </div>
         </div>
