--- a/index.html
+++ b/index.html
@@ -158,28 +158,34 @@
             <div class="container-1140">
                 <h2 class="center">What I Do</h2>
                 <hr>
-                <p class="center">Whether you're looking for help with setting up a website for the first time, or you have an existing site that you want to optimise, I offer a service that's right for you. You'll benefit from an affordable and personalised service, plus a website that you'll be proud of.</p>
-
+                <p class="center">Are you a small business owner looking to utilise technology more effectively in your business? If so,  you've come to the right place. Whether you are planning to create a website, build an online store, or you are simply seeking support with setting up digital tools, I can help you to bring your vision to life.</p>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-3">
                         <div class="offer-card center">
                             <i class="fa-solid fa-laptop"></i>
                         <h3>Small Business Websites</h3>
                         <p>If you are looking to create a website that is as unique as you are, I will design a professional, responsive and user-friendly website that perfectly reflects your brand and style.</p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                         <div class="offer-card center">
                             <i class="fa-solid fa-cart-shopping"></i>
-                        <h3>E-commerce Websites</h3>
-                        <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. I will design and build an online store for your business on Shopify or WooCommerce.</p>
+                        <h3>E-Commerce Websites</h3>
+                        <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. I will design and build an online store for your business to boost your sales.</p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                         <div class="offer-card center">
                             <i class="fa-solid fa-graduation-cap"></i>
-                        <h3>Online Learning Websites</h3>
+                        <h3>E-Learning Websites</h3>
                         <p>Online learning platforms like Udemy and Coursera are fiercely competitive. Instead, host your online courses on a custom website designed by me, and stand out from the crowd.</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="offer-card center">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        <h3>Digital Consulting</h3>
+                        <p>Digital tools and platforms can provide enormous value to your businesses. I can work with you to develop a strategy and identify the right tools that you should implement.</p>
                         </div>
                     </div>
                 </div>
@@ -188,7 +194,7 @@
         <div class="clients section container-1140 padding-top padding-bottom">
             <h2 class="center">What I've Done</h2>
                 <hr>
-            <p class="center">I've worked with businesses from a wide variety of industry sectors, including consultancies, legal professionals, wellbeing organisations, construction companies, tech start-ups, creatives and fashion brands. See some examples of my best work below.</p>
+            <p class="center">I've worked with businesses from a wide variety of industry sectors, including consultancies, legal professionals, wellbeing organisations, construction companies, tech businesses, creatives and fashion brands. See some examples of my best work below.</p>
             <div class="padding-top center">
                 <div class="row">
                     <div class="col-3"><img src="images/clients/bexley-linkup.webp" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
@@ -209,15 +215,15 @@
             <div class="container-1140 padding-top padding-bottom">
                 <div class="row">
                     <div class="col-4"><h2>Why Choose Me</h2></div>
-                    <div class="col-4"><i class="fa-regular fa-square-check"></i></i><h3>Attention to Detail</h3>
-                        <p>I'll scrutinise every detail to make sure everything is just right. You will be presented with a pixel-perfect design.</p></div>
-                    <div class="col-4"><i class="fa-regular fa-comment-dots"></i><h3>Jargon-free Communication</h3>
+                    <div class="col-4"><i class="fa-regular fa-square-check"></i></i><h3>Personalised Service</h3>
+                        <p>No need to deal with agencies or project managers. I offer a direct, one-on-one service where the human element is a top priority.</p></div>
+                    <div class="col-4"><i class="fa-regular fa-comment-dots"></i><h3>Jargon-Free Communication</h3>
                         <p>I won't bore you with the technical details. Expect to receive clear responses from me in plain English.</p></div>
                 </div>
                 <div class="row">
                     <div class="col-4"></div>
-                    <div class="col-4"><i class="fa-solid fa-medal"></i><h3>Demonstrable Track Record</h3>
-                        <p>Since 2020, I've worked with numerous small businesses from within a range of industry sectors to improve their online presence.</p></div>
+                    <div class="col-4"><i class="fa-solid fa-medal"></i><h3>More Than a Web Designer</h3>
+                        <p>As well as building beautiful websites, I also take care of other digital tasks so you can focus on what matters in your business.</p></div>
                     <div class="col-4"><i class="fa-solid fa-earth-americas"></i><h3>International Presence</h3>
                         <p>Is your business based outside of the UK? No problem - I have successfully worked with several customers around the globe.</p></div>
                 </div>
@@ -280,7 +286,7 @@
                 <div class="center">
                     <h2>What I Say</h2>
                     <hr>
-                    <p>Read my selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
+                    <p>Read my selection of blog posts for web design tips and advice, guides to help you make the most of digital tools, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row padding-bottom">
                     <div class="col-4">
