--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -482,6 +482,7 @@ permalink: /small-business-web-design/
                 </ul>
                 <h2>Additional Areas Covered</h2>
                 <ul>
+                    <li>Croydon</li>
                     <li>Kent</li>
                     <li><a href="https://sybiltec.com/web-design-surrey/">Surrey</a></li>
                 </ul>
