--- a/faqs.html
+++ b/faqs.html
@@ -100,7 +100,7 @@ permalink: /faqs/
                     },
                     {
                     "@type": "Question",
-                    "name": "Why should I work with you instead of with a website design agency?",
+                    "name": "Why should I work with you instead of with a web design agency?",
                     "acceptedAnswer": {
                         "@type": "Answer",
                         "text": "Working with an agency often entails dealing with project managers, slow communication, rigid timescales and high costs. On the other hand, working with a freelancer such as myself, you will experience a flexible, affordable service which is customised exactly to your needs. Additionally, I'm a business owner myself and I know what it takes to build a business from the ground up. I understand your frustrations and pain points, and so I aim to make the process as seamless as possible."
@@ -303,7 +303,7 @@ permalink: /faqs/
                     <div class="content"><p>This would very much depend on the requirements of your project. Please <a href="https://sybiltec.com/contact/">get in touch</a> with me to arrange an initial consultation, after which I can provide a detailed and accurate quote for you.</p></div>
                 </div>
 
-                <button class="collapsible"><strong>2. Why should I work with you instead of with a website design agency?</strong></button>
+                <button class="collapsible"><strong>2. Why should I work with you instead of with a web design agency?</strong></button>
                 <div class="content"><p>Working with an agency often entails dealing with project managers, slow communication, rigid timescales and high costs. On the other hand, working with a freelancer such as myself, you will experience a flexible, affordable service which is customised exactly to your needs. Additionally, I'm a business owner myself and I know what it takes to build a business from the ground up. I understand your frustrations and pain points, and so I aim to make the process as seamless as possible.</p></div>
 
                 <button class="collapsible"><strong>3. Can you help me to migrate my website to a different platform?</strong></button>
