--- a/about.html
+++ b/about.html
@@ -209,9 +209,10 @@ permalink: /about/
                 <p>Alongside running Sybiltec, I also have the following roles:</p>
 
                 <ul>
+                    <li>Digital Services Consultant at <a href="https://www.cntassociates.com" target="_blank" rel="noopener noreferrer">CNT Associates</a></li>
                     <li>Business Support Advisor for the <a href="https://sybiltec.com/website-design/">Bexley Talking Business - Business Support Programme</a> and the <a href="https://sybiltec.com/free-workshops-greenwich-borough/">Royal Borough of Greenwich Generative Business Support Programme</a></li>
-                    <li>Organiser for <a href="https://bexleylinkup.co.uk/" target="_blank" rel="noopener noreferrer">Bexley Linkup</a>, a monthly networking group for local businesses</li>
-                    <li>Committee Member for the non-profit organisation, <a href="https://techwomen4boards.co.uk/" target="_blank" rel="noopener noreferrer">TechWomen4Boards</a></li>
+                    <li>Organiser of <a href="https://bexleylinkup.co.uk/" target="_blank" rel="noopener noreferrer">Bexley Linkup</a>, a monthly networking group for local businesses</li>
+                    <li>Committee Member of the non-profit organisation, <a href="https://techwomen4boards.co.uk/" target="_blank" rel="noopener noreferrer">TechWomen4Boards</a></li>
                 </ul>
 
                 <p>Previous roles include:</p>
